--- a/server/package.json
+++ b/server/package.json
@@ -6,9 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "seed": "tsx prisma/seed.ts",
-    "build": "rimraf dist && npx tsc",
-    "start": "npm run build && node dist/index.js",
-    "dev": "npm run build && concurrently \"npx tsc -w\" \"nodemon --exec tsx src/index.ts\""
+    "clean": "rimraf dist",
+    "build": "npm run clean && tsc",
+    "start": "node dist/index.js",
+    "dev": "concurrently \"tsc -w\" \"nodemon --exec tsx src/index.ts\""
   },
   "keywords": [],
   "author": "",
@@ -17,7 +18,6 @@
   "dependencies": {
     "@prisma/client": "^6.7.0",
     "body-parser": "^2.2.0",
-    "concurrently": "^9.1.2",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
@@ -30,7 +30,9 @@
     "@types/express": "^5.0.1",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.11.24",
+    "concurrently": "^9.1.2",
     "nodemon": "^3.1.10",
+    "rimraf": "^5.0.5",
     "tsx": "^4.7.1",
     "typescript": "^5.3.3"
   }
